--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyArchetecture</string>
+    <string name="progress_dialog_loading">读取中，请稍候...</string>
+    <string name="progress_dialog_loading_title">加载中</string>
 </resources>
